# t_phase_transition

./: CMakeLists.txt  README.md  checkVec.py  pltG.py  run1d.cpp  stats1d.py  stats1dFuncs.py
1d/: 1d.cpp  1d.hpp
